update swagger message
