# api/docs/swagger.json
@@ -66,12 +66,6 @@
                             "$ref": "#/definitions/responses.APIResponse"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/responses.APIResponse"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
